@@ -1,5 +1,5 @@
 /* Libvoikko: Finnish spellchecker and hyphenator library
- * Copyright (C) 2006 Harri Pitkänen <hatapitk@iki.fi>
+ * Copyright (C) 2006 - 2008 Harri Pitkänen <hatapitk@iki.fi>
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -35,7 +35,7 @@ enum casetype {CT_NO_LETTERS, CT_ALL_LOWER, CT_FIRST_UPPER, CT_COMPLEX, CT_ALL_U
 /** Converts a multibyte string to a wide character string
  * @param word multibyte string to convert
  * @param encoding iconv name of the multibyte encoding
- * @param len length of the multibyte string in bytes or 0, if the string is null terminated
+ * @param len length of the multibyte string in bytes.
  * @return a newly allocated null terminated wide character string or null, if
  *         conversion failed.
  */
