@@ -9,3 +9,5 @@ P: Juhliin saapuu mm.
 E: Martta ja Reijo.
 P: Perjantai 13. 
 E: päivä on ensi viikolla.
+B: Hänen Lappeen kihlakunnan mies oli paitsi komea myös muotitietoinen, sillä miehet liikkuivat työasioissa alueella. 
+E: Viipuri ja Pietari olivat rahtimiehille tuttuja, lännen suunnalla Tallinnaan, Turkuun ja kauemmaksikin ja saivat vaikutteita pukeutumiseensa.
